--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,18 @@
 {
-  "name": "gridmap-layout-thailand",
-  "description": "Positions of tiles for Thailand grid map visualization",
-  "homepage": "https://github.com/kristw/gridmap-layout-thailand",
-  "main": "dist/gridmap-layout-thailand.min.js",
+  "name": "gridmap-layout-vietnam",
+  "description": "Positions of tiles for Vietnam grid map visualization",
+  "homepage": "https://github.com/micahstubbs/gridmap-layout-vietnam",
+  "main": "dist/gridmap-layout-vietnamwe.min.js",
   "authors": [
-    "Krist Wongsuphasawat <krist.wongz@gmail.com> (http://kristw.yellowpigz.com)"
+    "Krist Wongsuphasawat <krist.wongz@gmail.com> (http://kristw.yellowpigz.com)",
+    "Micah Stubbs <micahstubbs@gmail.com>"
   ],
   "license": "MIT",
   "keywords": [
     "gridmap",
     "gridmap-layout",
     "visualization",
-    "thailand"
+    "vietnam"
   ],
   "moduleType": [
     "amd",
